<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sport.woodball.Materi.ManfaatActivity"
    android:background="@drawable/dark">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Manfaat"
                android:textSize="11pt"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mparaf"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:textSize="7pt"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mparaf1"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:textSize="7pt"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mparaf2"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:textSize="7pt"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mparaf3"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:textSize="7pt"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mparaf4"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:textSize="7pt"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mparaf5"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:textSize="7pt"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mparaf6"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:textSize="7pt"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mparaf7"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:textSize="7pt"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mparaf8"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:textSize="7pt"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
