<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sejarah Olahraga Wood Ball"
                android:textSize="11pt"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paraf"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:textSize="7pt"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paraf2"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:textSize="7pt"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paraf3"
                android:layout_margin="10dp"
                android:textAlignment="gravity"
                android:textSize="7pt"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>