<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1. Mallet"
                android:textSize="11pt"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/mallet"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mallet"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="7pt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2. Bola"
                android:textSize="11pt"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bola"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bolla"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="7pt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3. Gate ( Gawang )"
                android:textSize="11pt"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textColor="@color/white"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/gate"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gate"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                android:textSize="7pt"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>